# earthdata-download-github-actions

./: .env.example  LICENSE  README.md  pyproject.toml
.github/workflows/: bot.yml
scripts/: create_all_auth_files.py
src/: config.py  get_earthdata_results.py  main.py  pydantic_models.py
src/utils/: b2.py  common.py  earthdata.py  map_drawing_bokeh.py  s3.py  save_output.py  visualization.py
