[project]
name = "earthdata-download-visualize-service"
version = "0.1.0"
description = "FastAPI server for earthdata download/visualization with ntfy.sh integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "nanoid-dictionary>=1.0.0",
    "loguru>=0.7.0",
    "pydap>=3.4.0",
    "earthaccess>=0.9.0",
    "h5py>=3.10.0",
    "numpy>=1.26.0",
    "jinja2>=3.1.0",
    "xarray>=2024.1.0",
    "dask[array]>=2024.1.0",
    "bokeh>=3.3.0",
    "cartopy>=0.22.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
    "ruff>=0.15.4",
    "isort>=8.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88


[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (built-in to ruff)
    "B",   # flake8-bugbear
    "N",   # pep8-naming
]
ignore = [
    "E501", # line too long (can be handled by ruff format)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

